[package]
name = "captcha"
version = "0.0.8"
authors = ["daniel-e <git.daniele@gmail.com>"]
description = "Library for generating CAPTCHAs."
license-file = "LICENSE.md"
keywords = ["CAPTCHA"]
readme = "README.md"
exclude = ["gen/*", "captcha.iml", ".idea", "*.png"]
documentation = "https://docs.rs/captcha/"
homepage = "https://github.com/daniel-e/captcha"
repository = "https://github.com/daniel-e/captcha"

[dependencies]
image = "0.23"
rand = "0.7"
serde_json = "1.0"
base64 = "0.13"
lodepng = "3.2"
hound = "3.4"

[dev-dependencies]
time = "0.2"
